adding back deleted documents

--- a/README.mb
+++ b/README.mb
@@ -3,6 +3,8 @@
 [ ] - Create home
 [ ] -  create about
 [ ] -  create better nav bar setup
-[ ] - once active nav bar changes colr
 
 
+Plan for setting up fadein on scroll
+check for visibility, if true, then opacity goes from 0 to one and translates right
+if invisible, opacity = 0, once visible, translate right and opacity = 1
